[package]
name = "foxxisbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
dotenvy = { version = "0.15.7", features = ["cli"] }
serenity = "0.12"
sysinfo = "0.30.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
